2013-10-27  Larus  <larus@ubuntu>

	* Setup/qtspim_debian_deployment/control.prototype:n
	Added Installed-Size field in DEBIAN/control file.

2013-10-15    <larus@IC-LMC-ICDO-01>

	* QtSpim/datawin.c QtSpim/spimview.h
	[https://sourceforge.net/p/spimsimulator/bugs/50]:
	Did not properly format and print data segments that were not a
	multiple of 16 bytes.

2013-10-14    <larus@IC-LMC-ICDO-01>

	* CPU/scanner.l [https://sourceforge.net/p/spimsimulator/bugs/49]:
	Did not properly scan escaped characters (e.g. '\n').

2013-10-13    <larus@IC-LMC-ICDO-01>

	* QtSpim/main.cpp, QtSpim/QtSpim.pro, QtSpim/spim_support.c
	[https://sourceforge.net/p/spimsimulator/bugs/47]
	[https://sourceforge.net/p/spimsimulator/bugs/48]:
	Port QtSpim to Qt 5.1.

2013-07-20    <JIM@LS-RED>

	* QtSpim/help/HP_AppA.html [Matthias Herlich herlich@upb.de]:
	Definition of caller/callee saved registers reversed!

2013-06-02    <JIM@LS-RED>

	* CPU/inst.c (format_an_inst) [Daniel Chester <chester@mail.eecis.udel.edu>]:
	FP compare (e.g. c.eq.s) instructions ignored condition flag
	numbers. The FP move (e.g. movt.s) instructions did not default
	condition flag.

2013-03-23    <JIM@LS-RED>

	* CPU/data.c (extern_directive) [https://sourceforge.net/p/spimsimulator/bugs/44/]:
	Multiple instance of extern directive resolved to distinct locations.

	* CPU/inst.c (i_type_inst_full_word) [https://sourceforge.net/p/spimsimulator/feature-requests/11/]:
	LW/SW of 0x8000..0xffff generated incorrect code.

2013-01-19    <JIM@LS-RED>

	* CPU/version.h: 
	Version 9.1.9

	* helloworld.s [https://sourceforge.net/p/spimsimulator/feature-requests/8/]:
	Added hello world example

2013-01-06    <JIM@LS-RED>

	* spimview.cpp, console.cpp [http://sourceforge.net/p/spimsimulator/feature-requests/9/]:
	Use fixed width font for spim output to line up colums properly

2012-12-16    <JIM@LS-RED>

	* QtSpim/QtSpim.pro [sourceforge #37: https://sourceforge.net/u/smeenai/]:
	Fix flex output file argument specification.